syntax = "proto2";

import "pyatv/mrp/protobuf/ProtocolMessage.proto";

extend ProtocolMessage {
  optional SetVolumeMessage setVolumeMessage = 55;
}

message SetVolumeMessage {
  optional float volume = 1;
  optional string outputDeviceUID = 2;
}
