syntax = "proto2";

import "pyatv/mrp/protobuf/ProtocolMessage.proto";

extend ProtocolMessage {
  optional VolumeControlAvailability volumeControlAvailabilityMessage = 22;
}

message VolumeControlAvailability {
  optional bool volumeControlAvailable = 1;
}